[project]
name = "splunkbase-mcp"
version = "0.1.0"
description = "MCP server for Splunkbase"
authors = [{ name = "Cameron Schmidt" }]
dependencies = [
    "aiosplunkbase >= 0.1.3",
    "mcp[cli]",
    "aiofiles"
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.hatch.metadata]
allow-direct-references = true
